# starting-ragchatbot-codebase

./: .flake8  CLAUDE.md  TESTING_AND_FIXES_SUMMARY.md  backend-tool-refactor.md  pyproject.toml
backend/: ai_generator.py  app.py  fix_rag_system.py  search_tools.py  vector_store.py
backend/tests/: README.md  __init__.py  conftest.py  diagnose_chromadb.py  test_ai_generator.py  test_api_components.py  test_api_endpoints.py  test_course_search_tool.py  test_end_to_end.py  test_rag_integration.py  test_real_system.py  test_vector_store.py  test_web_api.py  verify_fixes.py
frontend/: index.html  script.js  style.css
scripts/: format.sh  lint.sh  quality.sh
